kubernetes-skaffold/k8s/manifests/media.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  labels:
    app: media
spec:
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
      - name: media
        image: media-image
        ports:
        - protocol: TCP
          name: http
          containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
          requests:
            memory: "64Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: media
spec:
  selector:
    app: media
  ports:
  - port: 8000
    targetPort: 8080
