kubernetes-skaffold/k8s/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /articles
        backend:
          serviceName: api
          servicePort: 8000
      - path: /media
        backend:
          serviceName: api
          servicePort: 8000
      - path: /notifications
        backend:
          serviceName: api
          servicePort: 8000
